Add clock to index.html

--- a/index.html
+++ b/index.html
@@ -15,11 +15,18 @@
 </head>
 <body>
 <header>
-    <h1>Management Timer</h1>
+    <h1>Just A Title</h1>
 </header>
 <main class="row">
     <section id="timer__container" class="col-12 col-lg-6">
         <div id="timer__wrapper">
+            <svg class="timer__svg" xmlns="http://www.w3.org/2000/svg">
+                <g class="timer__g">
+                    <circle class="timer-main__circle" cx="200" cy="200" r="170"/>
+                    <circle class="timer-remain__circle" cx="200" cy="200" r="150"/>
+                </g>
+            </svg>
+            <span class="timer-time__text">00:10</span>
         </div>
     </section>
     <section id="task__container" class="col-12 col-lg-6">
