--- a/index.html
+++ b/index.html
@@ -31,6 +31,25 @@
     </section>
     <section id="task__container" class="col-12 col-lg-6">
         <div id="task__wrapper">
+            <div class="card">
+                <div class="card-header">
+                    <spam>Task Title</spam>
+                </div>
+                <div class="card-body">
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item">Smaple Meeting 1</li>
+                        <li class="list-group-item">Smaple Meeting 2</li>
+                        <li class="list-group-item">Smaple Meeting 3</li>
+                        <li class="list-group-item">Smaple Meeting 4</li>
+                        <li class="list-group-item">Smaple Meeting 5</li>
+                    </ul>
+                </div>
+                <div class="card-footer">
+                    <div class="btn btn-primary">
+                        <spam>Start</spam>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 </main>
