feat(js): Allowing user specify task and timer
User now can add, remove, start timer.Timer will
automatically start the next timer, when current
timer count to zero. Modify the time of a timer
will cause update of the count down timer's time.

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <circle class="timer-remain__circle" cx="200" cy="200" r="150"/>
                 </g>
             </svg><!-- Timer SVG -->
-            <span class="timer-time__text">00:10</span><!-- Timer time -->
+            <span class="timer-time__text" id="remain-time">00:00</span><!-- Timer time -->
         </div><!-- Timer wrapper section -->
     </section><!-- Timer container section -->
     <section id="task__container" class="col-12 col-lg-6">
