--- a/index.html
+++ b/index.html
@@ -46,35 +46,29 @@
                 </div>
                 <div class="card-body">
                     <ul class="list-group list-group-flush" id="task-body">
-<!--                        <li class="list-group-item" id="task_1">-->
-<!--                            <form>-->
-<!--                                <div class="input-group">-->
-<!--                                    <div class="input-group-prepend mr-1">-->
-<!--                                        <input type="text" name="title" class="form-control shadow-sm task-title"-->
-<!--                                               placeholder="Title" required value="Jack">-->
-<!--                                    </div>-->
-<!--                                    <input type="number" name="minute" class="form-control shadow-sm mr-1 task-minute" step="1"-->
-<!--                                           placeholder="Minute" required value="30">-->
-<!--                                    <div class="input-group-append">-->
-<!--                                        <a class="btn btn-secondary shadow-sm task-remove-btn" id="remove-btn">Remove</a>-->
-<!--                                    </div>-->
-<!--                                </div>-->
-<!--                            </form>-->
-<!--                        </li>-->
                     </ul>
                 </div>
-                <div class="card-footer">
-                    <div class="btn btn-danger mr-2" id="add_task">
-                        <span>Add</span>
+                <div class="card-footer d-flex flex-column">
+                    <div class="d-flex justify-content-end">
+                        <div class="btn btn-danger mr-2" id="add-task">
+                            <span>Add</span>
+                        </div>
+                        <div class="btn btn-info mr-2" id="pause-task">
+                            <span>Puase</span>
+                        </div>
+                        <div class="btn btn-primary" id="start-task">
+                            <span>Start</span>
+                        </div>
                     </div>
-                    <div class="btn btn-info mr-2" id="pause_task">
-                        <span>Puase</span>
-                    </div>
-                    <div class="btn btn-primary"id="start_task">
-                        <span>Start</span>
+                    <hr style="height: 1px; width: 100%;"/>
+                    <div class="d-flex justify-content-end">
+                        <a class="btn btn-info mr-2" id="import-task">Import</a>
+                        <a class="btn btn-primary" id="export-task"><span>Export</span></a>
                     </div>
                 </div>
-            </div><!-- Task card-->
+            </div>
+        </div>
+        </div><!-- Task card-->
         </div><!-- Timer wrapper section -->
     </section><!-- Task container section -->
 </main>
