--- a/index.html
+++ b/index.html
@@ -14,35 +14,39 @@
     <script type="text/javascript" src="js/task.js" defer></script>
     <script type="text/javascript" src="js/controller.js" defer></script>
     <title>Management Timer</title>
-
-
 </head>
 <body>
-<script>
-    document.body.style.backgroundColor = "yellow";
-</script>
 <header>
-    <h1 align="center"><font color="blue">Just A Title</font></h1>
-
+<!--    <h1 align="center"><font color="blue">Your Happy Timer</font></h1>-->
+    <h1 class="text-primary border-top border-bottom border-primary">Your Happy Timer</h1>
 </header>
 <main class="row">
-    <section id="timer__container" class="col-12 col-lg-6">
+    <section id="timer__container" class="col-12 col-lg-6 p">
         <div id="timer__wrapper">
-            <svg class="timer__svg" xmlns="http://www.w3.org/2000/svg">
-                <g class="timer__g">
-                    <circle class="timer-main__circle" cx="200" cy="200" r="170"/>
-
-                    <circle class="timer-remain__circle" cx="200" cy="200" r="150"/>
-                </g>
-            </svg><!-- Timer SVG -->
-            <span class="timer-time__text" id="remain-time">00:00</span><!-- Timer time -->
+            <div class="card w-100">
+                <div class="card-header text-center">
+<!--                    <span align="centre"><font color="red">Timer</font></span>-->
+                    <span class="text-danger">Timer</span>
+                </div><!-- Card header -->
+                <div class="card-body text-center">
+                    <span class="timer-time__text" id="remain-time">00:00</span><!-- Timer time -->
+                    <div id="progress-percentage">0%</div>
+                    <div class="progress" style="height: 3px;">
+                        <div class="progress-bar progress-bar-striped progress-bar-animated" id="progress-time" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%;"></div>
+                    </div><!-- Progress bar-->
+                </div><!-- Card Body -->
+                <div class="card-footer text-muted text-center">
+                    <h5 class=""><small>Your Happy Timer</small></h5><!-- Timer total time -->
+                </div><!-- Card Footer-->
+            </div><!-- Timer Card -->
         </div><!-- Timer wrapper section -->
     </section><!-- Timer container section -->
     <section id="task__container" class="col-12 col-lg-6">
         <div id="task__wrapper">
             <div class="card">
                 <div class="card-header">
-                    <span align="centre"><font color="red">Task Title</font></span>
+<!--                    <span align="centre"><font color="red">Task Title</font></span>-->
+                    <span class="text-danger">Task Title</span>
                 </div>
                 <div class="card-body">
                     <ul class="list-group list-group-flush" id="task-body">
