--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -8,6 +9,9 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <!-- Core CSS -->
     <link rel="stylesheet" type="text/css" href="css/core.css">
     <script type="text/javascript" src="js/timer.js" defer></script>
@@ -15,71 +19,81 @@
     <script type="text/javascript" src="js/controller.js" defer></script>
     <title>Management Timer</title>
 </head>
+
 <body>
-<header>
-<!--    <h1 align="center"><font color="blue">Your Happy Timer</font></h1>-->
-    <h1 class="text-primary border-top border-bottom border-primary">Your Happy Timer</h1>
-</header>
-<main class="row">
-    <section id="timer__container" class="col-12 col-lg-6 p">
-        <div id="timer__wrapper">
-            <div class="card w-100">
-                <div class="card-header text-center">
-<!--                    <span align="centre"><font color="red">Timer</font></span>-->
-                    <span class="text-danger">Timer</span>
-                </div><!-- Card header -->
-                <div class="card-body text-center">
-                    <span class="timer-time__text" id="remain-time">00:00</span><!-- Timer time -->
-                    <div id="progress-percentage">0%</div>
-                    <div class="progress" style="height: 3px;">
-                        <div class="progress-bar progress-bar-striped progress-bar-animated" id="progress-time" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%;"></div>
-                    </div><!-- Progress bar-->
-                </div><!-- Card Body -->
-                <div class="card-footer text-muted text-center">
-                    <h5 class=""><small>Your Happy Timer</small></h5><!-- Timer total time -->
-                </div><!-- Card Footer-->
-            </div><!-- Timer Card -->
-        </div><!-- Timer wrapper section -->
-    </section><!-- Timer container section -->
-    <section id="task__container" class="col-12 col-lg-6">
-        <div id="task__wrapper">
-            <div class="card">
-                <div class="card-header">
-<!--                    <span align="centre"><font color="red">Task Title</font></span>-->
-                    <span class="text-danger">Task Title</span>
-                </div>
-                <div class="card-body">
-                    <ul class="list-group list-group-flush" id="task-body">
-                    </ul>
-                </div>
-                <div class="card-footer d-flex flex-column">
-                    <div class="d-flex justify-content-end">
-                        <div class="btn btn-danger mr-2" id="add-task">
-                            <span>Add</span>
-                        </div>
-                        <div class="btn btn-info mr-2" id="pause-task">
-                            <span>Puase</span>
-                        </div>
-                        <div class="btn btn-primary" id="start-task">
-                            <span>Start</span>
-                        </div>
+    <header>
+        <!--    <h1 align="center"><font color="blue">Your Happy Timer</font></h1>-->
+        <h1 class="text-primary border-top border-bottom border-primary">Your Happy Timer</h1>
+        <span id="theme__container">
+            <i class="btn btn-dark fa fa-moon-o" id="change-theme" style="font-size: 20px;" aria-hidden="true">
+            </i>
+        </span>
+
+
+    </header>
+    <main class="row">
+        <section id="timer__container" class="col-12 col-lg-6 p">
+            <div id="timer__wrapper">
+                <div class="card w-100">
+                    <div class="card-header text-center">
+                        <!--                    <span align="centre"><font color="red">Timer</font></span>-->
+                        <span class="text-danger">Timer</span>
+                    </div><!-- Card header -->
+                    <div class="card-body text-center">
+                        <span class="timer-time__text" id="remain-time">00:00</span><!-- Timer time -->
+                        <div id="progress-percentage">0%</div>
+                        <div class="progress" style="height: 3px;">
+                            <div class="progress-bar progress-bar-striped progress-bar-animated" id="progress-time"
+                                role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"
+                                style="width: 0%;"></div>
+                        </div><!-- Progress bar-->
+                    </div><!-- Card Body -->
+                    <div class="card-footer text-muted text-center">
+                        <h5 class=""><small>Your Happy Timer</small></h5><!-- Timer total time -->
+                    </div><!-- Card Footer-->
+                </div><!-- Timer Card -->
+            </div><!-- Timer wrapper section -->
+        </section><!-- Timer container section -->
+        <section id="task__container" class="col-12 col-lg-6">
+            <div id="task__wrapper">
+                <div class="card">
+                    <div class="card-header">
+                        <!--                    <span align="centre"><font color="red">Task Title</font></span>-->
+                        <span class="text-danger">Task Title</span>
                     </div>
-                    <hr style="height: 1px; width: 100%;"/>
-                    <div class="d-flex justify-content-end">
-                        <a class="btn btn-info mr-2" id="import-task">Import</a>
-                        <a class="btn btn-primary" id="export-task"><span>Export</span></a>
+                    <div class="card-body">
+                        <ul class="list-group list-group-flush" id="task-body">
+                        </ul>
+                    </div>
+                    <div class="card-footer d-flex flex-column">
+                        <div class="d-flex justify-content-end">
+                            <div class="btn btn-danger mr-2" id="add-task">
+                                <span>Add</span>
+                            </div>
+                            <div class="btn btn-info mr-2" id="pause-task">
+                                <span>Pause</span>
+                            </div>
+                            <div class="btn btn-primary" id="start-task">
+                                <span>Start</span>
+                            </div>
+                        </div>
+                        <hr style="height: 1px; width: 100%;" />
+                        <div class="d-flex justify-content-end">
+                            <a class="btn btn-info mr-2" id="import-task">Import</a>
+                            <a class="btn btn-primary" id="export-task"><span>Export</span></a>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-        </div><!-- Task card-->
-        </div><!-- Timer wrapper section -->
-    </section><!-- Task container section -->
-</main>
-<!-- Optional JavaScript -->
-<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script type="text/javascript" src="js/jquery-3.5.1.slim.min.js"></script>
-<script type="text/javascript" src="js/popper.min.js"></script>
-<script type="text/javascript" src="js/bootstrap.min.js"></script>
+            </div><!-- Task card-->
+            </div><!-- Timer wrapper section -->
+        </section><!-- Task container section -->
+    </main>
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script type="text/javascript" src="js/jquery-3.5.1.slim.min.js"></script>
+    <script type="text/javascript" src="js/popper.min.js"></script>
+    <script type="text/javascript" src="js/bootstrap.min.js"></script>
 </body>
+
 </html>
