Added more color, Discovered bug in Add -> Set time -> Start -> Remove in controller

--- a/index.html
+++ b/index.html
@@ -20,15 +20,13 @@
     <title>Management Timer</title>
 </head>
 
-<body class="">
+<body>
     <header>
         <h1 class="border-top border-bottom border-dark">Your Happy Timer</h1>
         <span id="theme__container">
             <i class="btn btn-dark fa fa-moon-o" id="change-theme" style="font-size: 20px;" aria-hidden="true">
             </i>
         </span>
-
-
     </header>
     <main class="row">
         <section id="timer__container" class="col-12 col-lg-6 p">
@@ -55,7 +53,7 @@
                 <div class="card">
                     <div class="card-header">
                         <!--                    <span align="centre"><font color="red">Task Title</font></span>-->
-                        <span class="text-danger">Task Title</span>
+                        <span class="text-dark">Task Title</span>
                     </div>
                     <div class="card-body">
                         <ul class="list-group list-group-flush" id="task-body">
@@ -85,6 +83,7 @@
             </div><!-- Timer wrapper section -->
         </section><!-- Task container section -->
     </main>
+    <footer></footer>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script type="text/javascript" src="js/jquery-3.5.1.slim.min.js"></script>
