--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -8,55 +9,87 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <!-- Core CSS -->
     <link rel="stylesheet" type="text/css" href="css/core.css">
-
+    <script type="text/javascript" src="js/timer.js" defer></script>
+    <script type="text/javascript" src="js/task.js" defer></script>
+    <script type="text/javascript" src="js/controller.js" defer></script>
     <title>Management Timer</title>
 </head>
+
 <body>
 <header>
-    <h1>Just A Title</h1>
+    <h1 class="border-top border-bottom border-dark">Your Happy Timer</h1>
+    <span id="theme__container">
+            <i class="btn btn-dark fa fa-moon-o" id="change-theme" style="font-size: 20px;" aria-hidden="true">
+            </i>
+        </span>
 </header>
 <main class="row">
-    <section id="timer__container" class="col-12 col-lg-6">
-        <div id="timer__wrapper">
-            <svg class="timer__svg" xmlns="http://www.w3.org/2000/svg">
-                <g class="timer__g">
-                    <circle class="timer-main__circle" cx="200" cy="200" r="170"/>
-                    <circle class="timer-remain__circle" cx="200" cy="200" r="150"/>
-                </g>
-            </svg>
-            <span class="timer-time__text">00:10</span>
-        </div>
-    </section>
+    <section id="timer__container" class="col-12 col-lg-6 mb-2 mb-lg-0">
+        <div class="" id="timer__wrapper">
+            <div class="card w-100">
+                <div class="card-body text-center">
+                    <div id="progress-percentage">0%</div>
+                    <div class="progress" style="height: 0.75rem;">
+                        <div class="progress-bar progress-bar-striped progress-bar-animated" id="progress-time"
+                             role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"
+                             style="width: 0;"></div>
+                    </div><!-- Progress bar-->
+                    <div class=timer-time__container>
+                        <span class="timer-time__text" id="remain-time">00:00</span><!-- Timer time -->
+                    </div>
+                </div><!-- Card Body -->
+            </div><!-- Timer Card -->
+        </div><!-- Timer wrapper section -->
+    </section><!-- Timer container section -->
     <section id="task__container" class="col-12 col-lg-6">
         <div id="task__wrapper">
             <div class="card">
                 <div class="card-header">
-                    <spam>Task Title</spam>
-                </div>
+                    <!--                    <span align="centre"><font color="red">Task Title</font></span>-->
+                    <span class="text-dark"><b>Task Title</b></span>
+                </div><!-- Card header -->
                 <div class="card-body">
-                    <ul class="list-group list-group-flush">
-                        <li class="list-group-item">Smaple Meeting 1</li>
-                        <li class="list-group-item">Smaple Meeting 2</li>
-                        <li class="list-group-item">Smaple Meeting 3</li>
-                        <li class="list-group-item">Smaple Meeting 4</li>
-                        <li class="list-group-item">Smaple Meeting 5</li>
+                    <ul class="list-group list-group-flush" id="task-body">
                     </ul>
-                </div>
-                <div class="card-footer">
-                    <div class="btn btn-primary">
-                        <spam>Start</spam>
+                </div><!-- Card body -->
+                <div class="card-footer d-flex flex-column">
+                    <div class="d-flex justify-content-between">
+                        <div class="d-flex justify-content-end text-center">
+                            <button class="btn btn-secondary" id="auto-start" data-toggle="tooltip" data-placement="top" title="Start the next timer by clicking on start button.">Manuel</button>
+                        </div>
+                        <div class="d-flex justify-content-end">
+                            <div class="btn btn-danger mr-2" id="add-task">
+                                <span>Add</span>
+                            </div>
+                            <div class="btn btn-info mr-2" id="pause-task">
+                                <span>Pause</span>
+                            </div>
+                            <div class="btn btn-primary" id="start-task">
+                                <span>Start</span>
+                            </div>
+                        </div>
                     </div>
-                </div>
-            </div>
-        </div>
-    </section>
+                    <hr style="border-top: 1px solid black; width: 100%;"/>
+                    <div class="d-flex justify-content-end">
+                        <a class="btn btn-info mr-2" id="import-task">Import</a>
+                        <a class="btn btn-primary" id="export-task"><span>Export</span></a>
+                    </div>
+                </div><!-- Card footer -->
+            </div><!-- Task card -->
+        </div> <!-- Task wrapper section -->
+    </section><!-- Task container section -->
 </main>
+<footer></footer>
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 <script type="text/javascript" src="js/jquery-3.5.1.slim.min.js"></script>
 <script type="text/javascript" src="js/popper.min.js"></script>
 <script type="text/javascript" src="js/bootstrap.min.js"></script>
 </body>
+
 </html>
