add sound effect after task completed

--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
         </div> <!-- Task wrapper section -->
     </section><!-- Task container section -->
 </main>
+<audio src="./sound/mission_complete.wav" type="audio/wav" id="mission-complete"></audio>
 <footer></footer>
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
