--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
                         The pause button would pause the timer of course...
                     </p>
                     <p> <button class="btn btn-success">Manual</button>
-                        I kind of wonder what this button does as well xD
+                        This button design how the application start the next timer. If the button text is manual, it means the application need the user to press the
+                        start button to start the next timer. If the button is auto, it means the application will automatically start the next timer.
                     </p>
                     <p>
                         <button class="btn btn-info mr-2">Import</button>This button helps you import the tasks that you
