--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 <div class="card w-100">
                     <div class="card-body text-center">
                         <div id="progress-percentage">0%</div>
-                        <div class="progress" style="height: 0.75rem;">
+                        <div class="progress" id="progress-container" style="height: 0.75rem;">
                             <div class="progress-bar progress-bar-striped progress-bar-animated" id="progress-time"
                                 role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"
                                 style="width: 0;"></div>
